--- a/frontend/src/users/UsersHome.css
+++ b/frontend/src/users/UsersHome.css
@@ -6,40 +6,40 @@
 }
 
 .container-1 {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-background-color: blue;
-cursor: pointer;
-height: 100%;
-min-width: 20vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+  cursor: pointer;
+  height: 100%;
+  min-width: 20vw;
 }
 
 .icon {
-color: white;
-font-size: 10vw; /* set font size based on viewport width */
-margin-bottom: 0.5rem;
+  color: white;
+  font-size: 10vw; /* set font size based on viewport width */
+  margin-bottom: 0.5rem;
 }
 
 .word-1 {
-font-size: 2vw; /* set font size based on viewport width */
-font-weight: 1000;
-color: aliceblue;
-text-align: center;
-white-space: nowrap; /* prevent text from wrapping */
-overflow: hidden; /* hide overflowed text */
-text-overflow: ellipsis; /* add ellipsis to indicate hidden text */
+  font-size: 2vw; /* set font size based on viewport width */
+  font-weight: 1000;
+  color: aliceblue;
+  text-align: center;
+  white-space: nowrap; /* prevent text from wrapping */
+  overflow: hidden; /* hide overflowed text */
+  text-overflow: ellipsis; /* add ellipsis to indicate hidden text */
 }
 
 @media screen and (max-width: 768px) {
-.icon {
-  font-size: 2em;
-}
+  .icon {
+    font-size: 2em;
+  }
 
-.word-1 {
-  font-size: 16px;
-}
+  .word-1 {
+    font-size: 16px;
+  }
 }
 
 .home-nav {
@@ -47,12 +47,12 @@ text-overflow: ellipsis; /* add ellipsis to indicate hidden text */
   display: flex;
   max-width: 600px;
   /* border-bottom: 1px solid white; */
-  margin-left: 85%; 
+  margin-left: 85%;
 }
 
-.menu{
+.menu {
   /* float: center; */
-  position:relative;
+  position: relative;
   /* flex-direction: column; */
   /* font-size: 7rem; */
   width: 6vw;
@@ -61,95 +61,93 @@ text-overflow: ellipsis; /* add ellipsis to indicate hidden text */
   color: black;
 }
 
-.home-dropdown{
-background-color: #2C5CDA;
-color:white;
-border-radius: 5%;
-margin-left: 0;
-margin-right: 20%;
-margin-top: 2%;
-/* width: 200px; */
-width:auto;
-height: max-content;
+.home-dropdown {
+  background-color: #2c5cda;
+  color: white;
+  border-radius: 5%;
+  margin-left: 0;
+  margin-right: 20%;
+  margin-top: 2%;
+  /* width: 200px; */
+  width: auto;
+  height: max-content;
 }
 
-
-.dropdown1{
-border-color:aqua;
-font-size: 40px;
-margin-left: 10%;
-/* margin-right: 40%; */
-overflow: hidden;
-white-space: nowrap;
-text-overflow: ellipsis;
+.dropdown1 {
+  border-color: aqua;
+  font-size: 40px;
+  margin-left: 10%;
+  /* margin-right: 40%; */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
-
-.dropdown2{
-margin-left: 25%;
-font-size: 40px;
-margin-right: 20%;
-color: white;
+.dropdown2 {
+  margin-left: 25%;
+  font-size: 40px;
+  margin-right: 20%;
+  color: white;
 }
 
-.dropdown1:hover{
-font-size: 42px;
+.dropdown1:hover {
+  font-size: 42px;
 }
 
-.dropdown2:hover{
-font-size: 42px;
+.dropdown2:hover {
+  font-size: 42px;
 }
 
- @media screen and (max-width:1700px) {
-  .menu{
+@media screen and (max-width: 1700px) {
+  .menu {
     font-size: 60px;
   }
-  .home-dropdown{
+  .home-dropdown {
     width: 8em;
   }
-  .dropdown1{
+  .dropdown1 {
     font-size: 28px;
   }
-  .dropdown1:hover{
+  .dropdown1:hover {
     font-size: 30px;
-    }    
+  }
 }
 
-@media screen and (max-width:1350px) {
-  .menu{
+@media screen and (max-width: 1350px) {
+  .menu {
     font-size: 50px;
   }
-  .home-dropdown{
+  .home-dropdown {
     width: 6em;
     height: max-content;
   }
-  .dropdown1{
+  .dropdown1 {
     font-size: 20px;
   }
-  .dropdown1:hover{
+  .dropdown1:hover {
     font-size: 22px;
-    }    
-} 
+  }
+}
 
-@media screen and (max-width:667px){
-  .home-dropdown{
+@media screen and (max-width: 667px) {
+  .home-dropdown {
     height: max-content;
     width: 15vw;
   }
-  .dropdown1{
+  .dropdown1 {
     font-size: 10px;
   }
-  .dropdown1:hover{
+  .dropdown1:hover {
     font-size: 12px;
   }
 }
 
 .home-icons {
-display: flex;
-justify-content: center;
-align-items: center;
-height: 100vh;
-position: absolute;
-left: 50%;
-transform: translate(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
 }
