--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -118,6 +118,8 @@
   left: 50%;
   transform: translateX(-50%);
   top: 10%;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  font-weight: bold;
 }
 
 @media screen and (max-width:377px) and (max-height:669px) {
