--- a/frontend/src/meeting/components/chat/ChatPanel.css
+++ b/frontend/src/meeting/components/chat/ChatPanel.css
@@ -1,7 +1,7 @@
 .chat-panel {
   background-color: lightgray;
   width: 15vw;
-  height: 75vh;
+  /* height: 75vh; */
   /* display: flex;
   flex-direction: column; */
 }
